--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
-      max-width: 500px;
+      max-width: 100%px;
       width: 100%;
       margin: 0 auto 24px;
     }
@@ -56,7 +56,7 @@
     .board {
       position: relative;
       width: 100%;
-      max-width: 521px;
+      max-width: 100%px;
       margin: 0 auto;
       background: linear-gradient(to bottom, #f0f4f8, #dce3ea);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
