--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
-      max-width: 100%px;
+      max-width: 50%px;
       width: 100%;
       margin: 0 auto 24px;
     }
@@ -56,7 +56,7 @@
     .board {
       position: relative;
       width: 100%;
-      max-width: 100%px;
+      max-width: 50%px;
       margin: 0 auto;
       background: linear-gradient(to bottom, #f0f4f8, #dce3ea);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -134,7 +134,7 @@
 
 <div class="controls">
   <!-- Inputs -->
-  <label>Название турнира:<input type="text" id="tournamentInput" value="EPL S22 Europe Closed Qualifier" /></label>
+  <label>Название турнира:<input type="text" id="tournamentInput" value="EPL S22 Europe" /></label>
   <label>URL логотипа слева:<input type="text" id="logoLeftInput" value="https://i.postimg.cc/FKc97q4Q/2.png" /></label>
   <label>URL логотипа справа:<input type="text" id="logoRightInput" value="https://i.postimg.cc/JnRCsqYT/EPL20.png" /></label>
   <label>Счёт первой команды:<input type="number" id="score1Input" /></label>
