--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>    
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
@@ -15,7 +15,7 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
-      max-width: 50%px;
+      max-width: 600px;
       width: 100%;
       margin: 0 auto 24px;
     }
@@ -56,7 +56,8 @@
     .board {
       position: relative;
       width: 100%;
-      max-width: 50%px;
+      max-width: 600px;
+      aspect-ratio: 1 / 1;
       margin: 0 auto;
       background: linear-gradient(to bottom, #f0f4f8, #dce3ea);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -64,7 +65,6 @@
       padding-bottom: 0px;
       overflow-x: auto;
     }
-    /* Универсальный оверлей для любой карты */
     .map-overlay {
       display: none;
       position: absolute;
@@ -133,8 +133,7 @@
 <body>
 
 <div class="controls">
-  <!-- Inputs -->
-  <label>Название турнира:<input type="text" id="tournamentInput" value="EPL S22 Europe" /></label>
+  <label>Название турнира:<input type="text" id="tournamentInput" value="EPL S22 Europe Closed Qualifier" /></label>
   <label>URL логотипа слева:<input type="text" id="logoLeftInput" value="https://i.postimg.cc/FKc97q4Q/2.png" /></label>
   <label>URL логотипа справа:<input type="text" id="logoRightInput" value="https://i.postimg.cc/JnRCsqYT/EPL20.png" /></label>
   <label>Счёт первой команды:<input type="number" id="score1Input" /></label>
@@ -163,15 +162,14 @@ saffee
 </div>
 
 <div class="board" id="board">
-  <!-- Универсальный оверлей для карты -->
   <div class="map-overlay" id="mapOverlay"></div>
-  
+
   <div class="header">
     <img id="logoLeft" class="logo" src="" crossOrigin="anonymous" alt="Logo Left" />
     <h1 id="tournamentName" class="tournament-name"></h1>
     <img id="logoRight" class="logo" src="" crossOrigin="anonymous" alt="Logo Right" />
   </div>
-  
+
   <table>
     <colgroup><col class="score"><col class="team"><col class="stat"><col class="stat"><col class="stat"><col class="stat kast"><col class="stat adr"><col class="rating"></colgroup>
     <thead>
@@ -204,10 +202,9 @@ saffee
 </div>
 
 <script>
-  // Объект с ссылками на картинки для каждой карты
   const mapOverlays = {
     INFERNO: 'https://i.postimg.cc/CLvSccpB/CSPORTS-NEWS.png',
-    DUST_2: 'https://i.postimg.cc/L6ZB4b4L/CSPORTS-NEWS.png',    // <- замените на реальные ссылки
+    DUST_2: 'https://i.postimg.cc/L6ZB4b4L/CSPORTS-NEWS.png',
     TRAIN: 'https://i.postimg.cc/CxsvYQJJ/CSPORTS-NEWS.png',
     NUKE: 'https://i.postimg.cc/xC3jPYPM/CSPORTS-NEWS.png',
     ANCIENT: 'https://i.postimg.cc/rshrQ591/CSPORTS-NEWS.png',
@@ -232,8 +229,6 @@ saffee
     document.getElementById('mapName').textContent = map;
 
     const overlayDiv = document.getElementById('mapOverlay');
-
-    // Если для карты есть оверлей, показываем и задаём фон
     if (mapOverlays[map]) {
       overlayDiv.style.backgroundImage = `url('${mapOverlays[map]}')`;
       overlayDiv.style.display = 'block';
@@ -242,12 +237,7 @@ saffee
       overlayDiv.style.backgroundImage = '';
     }
 
-    const lines = data
-      .replace(/\r/g, '')
-      .split('\n')
-      .map(l => l.trim())
-      .filter(Boolean);
-
+    const lines = data.replace(/\r/g, '').split('\n').map(l => l.trim()).filter(Boolean);
     const tables = document.querySelectorAll('.board table');
     tables.forEach((table, teamIdx) => {
       let idx = teamIdx * Math.ceil(lines.length / tables.length);
@@ -259,7 +249,7 @@ saffee
       }
       if (/^[\d.]+$/.test(lines[idx])) idx++;
       document.getElementById(teamIdx === 0 ? 'team1Name' : 'team2Name').textContent = rawName;
-      table.querySelectorAll('thead .col-header').forEach((th, i) => (th.textContent = headerTokens[i] || ''));
+      table.querySelectorAll('thead .col-header').forEach((th, i) => th.textContent = headerTokens[i] || '');
       for (let i = 0; i < 5; i++) {
         const name = lines[idx++];
         const metrics = lines[idx++].split(/\s+/);
@@ -275,22 +265,38 @@ saffee
         cols[6].classList.toggle('rating-low', parseFloat(metrics[5]) < 1);
       }
     });
+
+    setTimeout(() => {
+      const board = document.getElementById('board');
+      const width = board.offsetWidth;
+      board.style.height = width + 'px';
+    }, 100);
   }
 
   document.getElementById('updateBtn').addEventListener('click', updateStats);
 
   document.getElementById('downloadBtn').addEventListener('click', () => {
-    html2canvas(document.getElementById('board'), { useCORS: true }).then(canvas => {
+    const board = document.getElementById('board');
+    const width = board.offsetWidth;
+    board.style.height = width + 'px';
+
+    html2canvas(board, { useCORS: true }).then(canvas => {
       const link = document.createElement('a');
       link.download = 'mapstats-board.png';
       link.href = canvas.toDataURL('image/png');
       link.click();
+
+      board.style.height = ''; // Очистить после
     });
   });
 
   document.getElementById('shareBtn').addEventListener('click', async () => {
     try {
-      const canvas = await html2canvas(document.getElementById('board'), { useCORS: true });
+      const board = document.getElementById('board');
+      const width = board.offsetWidth;
+      board.style.height = width + 'px';
+
+      const canvas = await html2canvas(board, { useCORS: true });
       canvas.toBlob(async blob => {
         const file = new File([blob], 'mapstats-board.png', { type: 'image/png' });
         if (navigator.canShare && navigator.canShare({ files: [file] })) {
@@ -298,13 +304,19 @@ saffee
         } else {
           alert('Ваш браузер не поддерживает Web Share API для файлов.');
         }
+        board.style.height = '';
       });
     } catch {
       alert('Не удалось создать изображение для шаринга.');
     }
   });
 
-  // Можно сразу обновить, чтобы было видно начальное состояние
+  window.addEventListener('resize', () => {
+    const board = document.getElementById('board');
+    const width = board.offsetWidth;
+    board.style.height = width + 'px';
+  });
+
   updateStats();
 </script>
 
