--- a/index.html
+++ b/index.html
@@ -2,153 +2,186 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MapStats Board</title>
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>HLTV Mapstats — мобильная версия</title>
   <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f0f2f5;
+      background: linear-gradient(to bottom, #d7dce3);
+      font-family: Arial, sans-serif;
+      padding: 16px;
+    }
+    .controls {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      padding: 20px;
-    }
-
-    h1 {
-      color: #1f2937;
-      margin-bottom: 20px;
-    }
-
-    #board {
-      background-color: #ffffff;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      padding: 20px;
-      border-radius: 16px;
+      gap: 12px;
+      max-width: 500px;
       width: 100%;
-      max-width: 600px;
-      aspect-ratio: 1 / 1; /* делаем изначально квадрат */
+      margin: 0 auto 24px;
+    }
+    .controls label {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      font-size: 16px;
     }
-
+    .controls input,
+    .controls textarea,
+    .controls select {
+      margin-top: 4px;
+      padding: 10px;
+      font-family: monospace;
+      font-size: 19px;
+      width: 100%;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    .controls textarea {
+      height: 200px;
+      resize: vertical;
+    }
+    .controls button {
+      padding: 20px;
+      font-size: 20px;
+      cursor: pointer;
+      width: 100%;
+      border: none;
+      background: linear-gradient(to right, #1a2f40, #2d3f52);
+      color: #fff;
+      border-radius: 6px;
+      transition: background 0.3s ease;
+    }
+    .controls button:hover {
+      background: linear-gradient(to right, #2d3f52, #1a2f40);
+    }
+    .board {
+      position: relative;
+      width: 100%;
+      max-width: 521px;
+      margin: 0 auto;
+      background: linear-gradient(to bottom, #f0f4f8, #dce3ea);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      border-radius: 0px;
+    }
+    .map-overlay {
+      display: none;
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: 100;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      pointer-events: none;
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 8px;
+    }
+    .logo { max-width: 36px; max-height: 36px; }
+    .tournament-name {
+      font-size: 21px;
+      font-weight: bold;
+      text-align: center;
+      flex-grow: 1;
+      margin: 0 8px;
+      word-break: break-word;
+    }
     table {
       width: 100%;
-      height: 100%;
       border-collapse: collapse;
-      text-align: center;
+      table-layout: fixed;
     }
-
+    thead {
+      background: linear-gradient(to right, #1a2f40, #dc143c);
+      color: #fff;
+    }
     th, td {
-      border: 1px solid #ccc;
+      border-bottom: 1px solid #ccd3dc;
+      padding: 8px;
+      text-align: center;
+      font-size: 15px;
+      white-space: nowrap;
+    }
+    th.team-name, td.team-name { text-align: left; }
+    col.score { width: 5%; }
+    col.team { width: 26%; }
+    col.stat { width: 11%; }
+    col.stat.kast { width: 20%; }
+    col.stat.adr { width: 11%; }
+    col.rating { width: 19%; }
+    td.rating-low { color: #c0392b; }
+    td.rating-high { color: #27ae60; }
+    .map-name {
+      text-align: center;
       padding: 10px;
-      font-size: clamp(10px, 3vw, 14px);
+      font-weight: bold;
+      font-size: 18px;
     }
-
-    th {
-      background-color: #1f2937;
-      color: white;
-    }
-
-    #downloadBtn {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #dc143c;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    #downloadBtn:hover {
-      background-color: #a01030;
-    }
-
-    @media (max-width: 600px) {
-      #board {
-        max-width: 90vw;
-      }
+    .current-score {
+      background-color: #1a2f40;
+      color: #FFF;
+      font-weight: bold;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
-  <h1>MapStats Board</h1>
 
-  <div id="board">
-    <table>
-      <thead>
-        <tr>
-          <th>Карта</th>
-          <th>Победы</th>
-          <th>Поражения</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Inferno</td>
-          <td>12</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>Mirage</td>
-          <td>15</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>Nuke</td>
-          <td>10</td>
-          <td>10</td>
-        </tr>
-        <tr>
-          <td>Overpass</td>
-          <td>8</td>
-          <td>12</td>
-        </tr>
-        <tr>
-          <td>Ancient</td>
-          <td>14</td>
-          <td>6</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+<!-- ... HTML remains unchanged ... -->
 
-  <button id="downloadBtn">Скачать таблицу</button>
+<script>
+  // ... функция updateStats остаётся без изменений ...
 
-  <script>
-    document.getElementById('downloadBtn').addEventListener('click', () => {
-      const board = document.getElementById('board');
+  document.getElementById('downloadBtn').addEventListener('click', () => {
+    const board = document.getElementById('board');
 
-      // 1. Удаляем ограничения и задаём auto height
-      board.style.overflow = 'visible';
-      board.style.height = 'auto';
+    board.style.overflow = 'visible';
+    board.style.height = 'auto';
 
-      // 2. Получаем полную высоту и ширину
-      const width = board.offsetWidth;
-      const height = board.scrollHeight;
+    const width = board.offsetWidth;
+    const height = board.scrollHeight;
+    const squareSize = Math.max(width, height);
+    board.style.width = squareSize + 'px';
+    board.style.height = squareSize + 'px';
 
-      // 3. Выставляем квадрат
-      const squareSize = Math.max(width, height);
-      board.style.height = squareSize + 'px';
-      board.style.width = squareSize + 'px';
+    html2canvas(board, { useCORS: true, scale: 2 }).then(canvas => {
+      const link = document.createElement('a');
+      link.download = 'mapstats-board.png';
+      link.href = canvas.toDataURL('image/png');
+      link.click();
 
-      // 4. Скриншот
-      html2canvas(board, { useCORS: true, scale: 2 }).then(canvas => {
-        const link = document.createElement('a');
-        link.download = 'mapstats-board.png';
-        link.href = canvas.toDataURL('image/png');
-        link.click();
-
-        // 5. Возврат к исходному
-        board.style.height = '';
-        board.style.width = '';
-        board.style.overflow = '';
-      });
+      board.style.width = '';
+      board.style.height = '';
+      board.style.overflow = '';
     });
-  </script>
+  });
+
+  // ... shareBtn остаётся без изменений ...
+
+  updateStats();
+
+
+  document.getElementById('shareBtn').addEventListener('click', async () => {
+    try {
+      const canvas = await html2canvas(document.getElementById('board'), { useCORS: true });
+      canvas.toBlob(async blob => {
+        const file = new File([blob], 'mapstats-board.png', { type: 'image/png' });
+        if (navigator.canShare && navigator.canShare({ files: [file] })) {
+          await navigator.share({ files: [file] });
+        } else {
+          alert('Ваш браузер не поддерживает Web Share API для файлов.');
+        }
+      });
+    } catch {
+      alert('Не удалось создать изображение для шаринга.');
+    }
+  });
+
+  // Можно сразу обновить, чтобы было видно начальное состояние
+  updateStats();
+</script>
+
 </body>
 </html>
