--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
       position: relative;
       width: 100%;
       max-width: 521px;
+      height: auto;
+      aspect-ratio: 1 / 1; /* Квадратная форма */
       margin: 0 auto;
       background: linear-gradient(to bottom, #f0f4f8, #dce3ea);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       border-radius: 0px;
+      overflow-x: auto;
     }
     .map-overlay {
       display: none;
@@ -129,36 +132,150 @@
 </head>
 <body>
 
-<!-- ... HTML remains unchanged ... -->
+<div class="controls">
+  <label>Название турнира:<input type="text" id="tournamentInput" value="EPL S22 Europe Closed Qualifier" /></label>
+  <label>URL логотипа слева:<input type="text" id="logoLeftInput" value="https://i.postimg.cc/FKc97q4Q/2.png" /></label>
+  <label>URL логотипа справа:<input type="text" id="logoRightInput" value="https://i.postimg.cc/JnRCsqYT/EPL20.png" /></label>
+  <label>Счёт первой команды:<input type="number" id="score1Input" /></label>
+  <label>Счёт второй команды:<input type="number" id="score2Input" /></label>
+  <label>Название карты:
+    <select id="mapInput">
+      <option value="INFERNO">INFERNO</option>
+      <option value="DUST_2">DUST_2</option>
+      <option value="TRAIN">TRAIN</option>
+      <option value="NUKE">NUKE</option>
+      <option value="ANCIENT">ANCIENT</option>
+      <option value="ANUBIS">ANUBIS</option>
+      <option value="MIRAGE">MIRAGE</option>
+    </select>
+  </label>
+  <label>Данные команд:
+    <textarea id="inputData" placeholder="MIBR K A D KAST ADR RATING
+2.1
+saffee
+33 10 21 83.3% 69.5 1.20
+..."></textarea>
+  </label>
+  <button id="updateBtn">Обновить статистику</button>
+  <button id="downloadBtn">Скачать как изображение</button>
+  <button id="shareBtn">Поделиться</button>
+</div>
+
+<div class="board" id="board">
+  <div class="map-overlay" id="mapOverlay"></div>
+  <div class="header">
+    <img id="logoLeft" class="logo" src="" crossOrigin="anonymous" alt="Logo Left" />
+    <h1 id="tournamentName" class="tournament-name"></h1>
+    <img id="logoRight" class="logo" src="" crossOrigin="anonymous" alt="Logo Right" />
+  </div>
+
+  <table>
+    <colgroup><col class="score"><col class="team"><col class="stat"><col class="stat"><col class="stat"><col class="stat kast"><col class="stat adr"><col class="rating"></colgroup>
+    <thead>
+      <tr><th id="score1" class="current-score">0</th><th id="team1Name" class="team-name">Team1</th><th class="col-header"></th><th class="col-header"></th><th class="col-header"></th><th class="col-header"></th><th class="col-header"></th><th class="col-header"></th></tr>
+    </thead>
+    <tbody>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+    </tbody>
+  </table>
+
+  <table>
+    <colgroup><col class="score"><col class="team"><col class="stat"><col class="stat"><col class="stat"><col class="stat kast"><col class="stat adr"><col class="rating"></colgroup>
+    <thead>
+      <tr><th id="score2" class="current-score">0</th><th id="team2Name" class="team-name">Team2</th><th class="col-header"></th><th class="col-header"></th><th class="col-header"></th><th class="col-header"></th><th class="col-header"></th><th class="col-header"></th></tr>
+    </thead>
+    <tbody>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+      <tr><td colspan="2" class="team-name"></td><td></td><td></td><td></td><td></td><td></td><td class="rating-low"></td></tr>
+    </tbody>
+  </table>
+
+  <div id="mapName" class="map-name">INFERNO</div>
+</div>
 
 <script>
-  // ... функция updateStats остаётся без изменений ...
+  const mapOverlays = {
+    INFERNO: 'https://i.postimg.cc/CLvSccpB/CSPORTS-NEWS.png',
+    DUST_2: 'https://i.postimg.cc/L6ZB4b4L/CSPORTS-NEWS.png',
+    TRAIN: 'https://i.postimg.cc/CxsvYQJJ/CSPORTS-NEWS.png',
+    NUKE: 'https://i.postimg.cc/xC3jPYPM/CSPORTS-NEWS.png',
+    ANCIENT: 'https://i.postimg.cc/rshrQ591/CSPORTS-NEWS.png',
+    ANUBIS: 'https://i.postimg.cc/ZRQmHRd9/CSPORTS-NEWS.png',
+    MIRAGE: 'https://i.postimg.cc/x8HdbH4j/CSPORTS-NEWS.png'
+  };
+
+  function updateStats() {
+    const tournamentName = document.getElementById('tournamentInput').value;
+    const logoLeft = document.getElementById('logoLeftInput').value;
+    const logoRight = document.getElementById('logoRightInput').value;
+    const score1 = document.getElementById('score1Input').value;
+    const score2 = document.getElementById('score2Input').value;
+    const map = document.getElementById('mapInput').value;
+    const data = document.getElementById('inputData').value;
+
+    document.getElementById('tournamentName').textContent = tournamentName;
+    document.getElementById('logoLeft').src = logoLeft;
+    document.getElementById('logoRight').src = logoRight;
+    document.getElementById('score1').textContent = score1;
+    document.getElementById('score2').textContent = score2;
+    document.getElementById('mapName').textContent = map;
+
+    const overlayDiv = document.getElementById('mapOverlay');
+    if (mapOverlays[map]) {
+      overlayDiv.style.backgroundImage = `url('${mapOverlays[map]}')`;
+      overlayDiv.style.display = 'block';
+    } else {
+      overlayDiv.style.display = 'none';
+      overlayDiv.style.backgroundImage = '';
+    }
+
+    const lines = data.replace(/\r/g, '').split('\n').map(l => l.trim()).filter(Boolean);
+    const tables = document.querySelectorAll('.board table');
+    tables.forEach((table, teamIdx) => {
+      let idx = teamIdx * Math.ceil(lines.length / tables.length);
+      const headerTokens = lines[idx++].split(/\s+/);
+      let rawName = headerTokens.shift();
+      if (rawName.length % 2 === 0) {
+        const half = rawName.slice(0, rawName.length / 2);
+        if (half + half === rawName) rawName = half;
+      }
+      if (/^[\d.]+$/.test(lines[idx])) idx++;
+      document.getElementById(teamIdx === 0 ? 'team1Name' : 'team2Name').textContent = rawName;
+      table.querySelectorAll('thead .col-header').forEach((th, i) => (th.textContent = headerTokens[i] || ''));
+      for (let i = 0; i < 5; i++) {
+        const name = lines[idx++];
+        const metrics = lines[idx++].split(/\s+/);
+        const cols = table.querySelectorAll('tbody tr')[i].querySelectorAll('td');
+        cols[0].textContent = name;
+        cols[1].textContent = metrics[0] || '';
+        cols[2].textContent = metrics[1] || '';
+        cols[3].textContent = metrics[2] || '';
+        cols[4].textContent = metrics[3] || '';
+        cols[5].textContent = metrics[4] || '';
+        cols[6].textContent = metrics[5] || '';
+        cols[6].classList.toggle('rating-high', parseFloat(metrics[5]) >= 1);
+        cols[6].classList.toggle('rating-low', parseFloat(metrics[5]) < 1);
+      }
+    });
+  }
+
+  document.getElementById('updateBtn').addEventListener('click', updateStats);
 
   document.getElementById('downloadBtn').addEventListener('click', () => {
-    const board = document.getElementById('board');
-
-    board.style.overflow = 'visible';
-    board.style.height = 'auto';
-
-    const width = board.offsetWidth;
-    const height = board.scrollHeight;
-    const squareSize = Math.max(width, height);
-    board.style.width = squareSize + 'px';
-    board.style.height = squareSize + 'px';
-
-    html2canvas(board, { useCORS: true, scale: 2 }).then(canvas => {
+    html2canvas(document.getElementById('board'), { useCORS: true }).then(canvas => {
       const link = document.createElement('a');
       link.download = 'mapstats-board.png';
       link.href = canvas.toDataURL('image/png');
       link.click();
-
-      board.style.width = '';
-      board.style.height = '';
-      board.style.overflow = '';
     });
   });
-
-  // ... shareBtn остаётся без изменений ...
 
   document.getElementById('shareBtn').addEventListener('click', async () => {
     try {
@@ -175,6 +292,7 @@
       alert('Не удалось создать изображение для шаринга.');
     }
   });
+
   updateStats();
 </script>
 
