--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     }
     .board {
       position: relative;
-      width: 100%;
+      width: 521px;
       max-width: 521px;
       margin: 0 auto;
       background: linear-gradient(to bottom, #f0f4f8, #dce3ea);
