--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.5, user-scalable=yes" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HLTV Mapstats — мобильная версия</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -55,8 +55,8 @@
     }
     .board {
       position: relative;
-      width: 521px;
-      max-width: 521px;
+      width: 100%;
+      max-width: 1000px;
       margin: 0 auto;
       background: linear-gradient(to bottom, #f0f4f8, #dce3ea);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
