--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <option value="TRAIN">TRAIN</option>
       <option value="NUKE">NUKE</option>
       <option value="ANCIENT">ANCIENT</option>
-      <option value="ANUBIS">ANUBIS</option>
+      <option value="OVERPASS">OVERPASS</option>
       <option value="MIRAGE">MIRAGE</option>
     </select>
   </label>
@@ -210,7 +210,7 @@ saffee
     TRAIN: 'https://i.postimg.cc/CxsvYQJJ/CSPORTS-NEWS.png',
     NUKE: 'https://i.postimg.cc/xC3jPYPM/CSPORTS-NEWS.png',
     ANCIENT: 'https://i.postimg.cc/rshrQ591/CSPORTS-NEWS.png',
-    ANUBIS: 'https://i.postimg.cc/ZRQmHRd9/CSPORTS-NEWS.png',
+    OVERPASS: 'https://i.postimg.cc/rmzb8zMb/OVERPASS.png',
     MIRAGE: 'https://i.postimg.cc/x8HdbH4j/CSPORTS-NEWS.png'
   };
 
